# O2CodeChecker

./: CMakeLists.txt  ClangTidyDiagnosticConsumer.h  README.md  add_new_check.py  check_clang_tidy.py  fix_fail_logger.py  run_tests.sh
aliceO2/: AliceO2TidyModule.cpp  CMakeLists.txt  ConfigurationParser.cpp  ConfigurationParser.h  FunctionNamingCheck.cpp  FunctionNamingCheck.h  MemberNamesCheck.cpp  MemberNamesCheck.h  NamespaceNamingCheck.cpp  NamespaceNamingCheck.h  SizeofCheck.cpp  SizeofCheck.h  TypeNamesNamingCheck.cpp  TypeNamesNamingCheck.h  VariableNamingConstexprCheck.cpp  VariableNamingConstexprCheck.h  VariableNamingGlobalCheck.cpp  VariableNamingGlobalCheck.h  VariableNamingStaticMemberCheck.cpp  VariableNamingStaticMemberCheck.h
configs/: aliceO2-function-naming  aliceO2-type-names-naming
docs/clang-tidy/checks/: aliceO2-MemberNamesCheck.rst  aliceO2-SizeofCheck.rst  aliceO2-function-naming.rst  aliceO2-namespace-naming.rst  aliceO2-type-names-naming.rst  aliceO2-variable-naming-constexpr.rst  aliceO2-variable-naming-global.rst  aliceO2-variable-naming-static-member.rst  list.rst
plugin/: CMakeLists.txt  FooCheck.cpp  FooCheck.h  PluginTidyModule.cpp
reporting/: CMakeLists.txt  InterfaceLister.cpp  InterfaceLister.h  ReportingTidyModule.cpp  VirtFuncLister.cpp  VirtFuncLister.h
test/: .clang-tidy  CMakeLists.txt  aliceO2-function-naming.cpp  aliceO2-namespace-naming.cpp  aliceO2-type-names-naming.cpp  aliceO2-variable-naming-constexpr.cpp  aliceO2-variable-naming-global.cpp  aliceO2-variable-naming-static-member.cpp  clear_test_results.sh  header.h  test1.cpp  testregex.cpp
tool/: CMakeLists.txt  ClangTidyMain.cpp  fix_fail_logger.py  run_O2CodeChecker.py
utility/: CMakeLists.txt  ThinCompilationsDatabase.py
